@@ -722,9 +722,9 @@ application/x-object-file
 application/x-ogg
 	_description=ogg audio
 	default_action_type=application
-	short_list_application_ids_for_novice_user_level=ogg123,xmms,freeamp
-	short_list_application_ids_for_intermediate_user_level=ogg123,xmms,freeamp
-	short_list_application_ids_for_advanced_user_level=ogg123,xmms,freeamp
+	short_list_application_ids_for_novice_user_level=xmms,freeamp
+	short_list_application_ids_for_intermediate_user_level=xmms,freeamp
+	short_list_application_ids_for_advanced_user_level=xmms,freeamp
 	category=Audio
 	use_category_default=no
 
